name:                   http-client-request-modifiers
version:                0.1
synopsis:               Convenient monadic HTTP request modifiers
description:
  These are simple, monadic functions that modify an HTTP @Request@ from
  @http-client@. They make it easy to chain request updates and allow for
  arbitrary monadic effects.
copyright:              (c) 2014 Sean Leather
license:                BSD3
license-file:           LICENSE
author:                 Sean Leather
maintainer:             sean.leather@gmail.com
category:               Network
build-type:             Simple
cabal-version:          >= 1.10
homepage:               https://github.com/spl/http-client-request-modifiers
bug-reports:            https://github.com/spl/http-client-request-modifiers/issues
extra-source-files:     README.md
                        CHANGELOG.md

source-repository head
  type:                 git
  location:             https://github.com/spl/http-client-request-modifiers.git

library
  hs-source-dirs:       lib
  exposed-modules:      Network.HTTP.Client.Request.Modifiers
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        exceptions,
                        http-client,
                        http-media,
                        http-types,
                        network,
                        network-uri
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5,
                        bytestring,
                        tasty,
                        tasty-hunit,
                        http-client,
                        http-client-request-modifiers,
                        http-media,
                        http-types,
                        network,
                        network-uri
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
                        LambdaCase
                        RankNTypes
  ghc-options:          -Wall
